fixing overflow issue by using viewport height

--- a/src/app/restaurantdetail/restaurantDetail.component.css
+++ b/src/app/restaurantdetail/restaurantDetail.component.css
@@ -1,3 +1,9 @@
+body{
+  max-height: 100vh !important;
+    overflow: hidden;
+}
+
+
 .error_bar {
   position: absolute;
   top: 0;
